--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "devDependencies": {
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.1",
     "html-webpack-plugin": "^5.6.4",
+    "http-server": "^14.1.1",
     "sass": "^1.93.2",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
@@ -15,10 +17,16 @@
   },
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve --open"
+    "dev": "webpack serve --open",
+    "http-server": "http-server ./dist --proxy http://127.0.0.1:8080?",
+    "live-server": "live-server ./dist --entry-file=index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "admin-lte": "3.0.5",
+    "dotenv-webpack": "^8.0.1"
+  }
 }
